Fix bug jumping header logo due to nav toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@ a {
     margin: 0 auto;
 }
 
+.header-logo a {
+    justify-content: center;
+}
+
 .logo {
     width: 5rem;
     height: fit-content;
@@ -66,7 +70,7 @@ a {
     width: 100%;
     padding: 50px;
     flex-direction: column;
-    transition: all 0.2s;
+    transition: all 0.5s;
 }
 
 .hamburger {
@@ -79,8 +83,8 @@ a {
 }
 
 #main,
-#header {
-    transition: .5s;
+#hamburger {
+    transition: margin-left .5s;
 }
 
 #main {
@@ -108,7 +112,7 @@ Created using information from W3S*/
 .sidenav a {
     padding: .8rem .8rem .8rem 3.2rem;
     text-decoration: none;
-    font-size: 2.5rem;
+    font-size: 1.8rem;
     color: #fff;
     display: block;
     transition: 0.3s;
@@ -128,8 +132,6 @@ Created using information from W3S*/
 }
 
 .game-header {
-    align-items: center;
-    justify-content: space-between;
 }
 
 .game-container {
